--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ dependencies = [
     "ccxt>=4.5.9",
     "tenacity>=9.1.2",
     "aiolimiter>=1.2.1",
+    "fastapi>=0.115.6,<1.0.0",
+    "uvicorn>=0.32.0",
     "jinja2>=3.1.6",
     "setuptools>=78.1.1",
     "requests>=2.32.5",
