--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,14 @@ websockets>=15.0.1
 ccxt>=4.5.9
 tenacity>=9.1.2
 aiolimiter>=1.2.1
+fastapi>=0.115.6,<1.0.0
 
 # Optional feature store backends are available via `pip install tradepulse[feature_store]`
 
 # Templates & packaging helpers
 click>=8.1.7
 jinja2>=3.1.6
+uvicorn>=0.32.0
 setuptools>=78.1.1
 
 # Security: Pin secure versions of common transitive dependencies
