--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,15 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-requests]
+  - repo: local
+    hooks:
+      - id: slotscheck
+        name: slotscheck (core packages)
+        entry: python -m slotscheck --module core --module backtest --module execution
+        language: python
+        additional_dependencies:
+          - slotscheck==0.19.1
+        pass_filenames: false
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.5.0
     hooks:
