Add roadmap, CI HTML reports, and resilience improvements

--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -85,7 +85,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
-      actions: write
+      actions: read
     outputs:
       version: ${{ steps.release.outputs.version }}
     steps:
