--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -18,33 +18,25 @@ jobs:
       contents: read
     steps:
       - name: Ensure release targets protected branch
-        env:
-          TARGET: ${{ github.event.release.target_commitish }}
-          REPO: ${{ github.repository }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if ! command -v jq >/dev/null 2>&1; then
-            sudo apt-get update
-            sudo apt-get install -y jq
-          fi
-          if [ -z "${TARGET}" ]; then
-            echo "::error::Release target branch is not specified."
-            exit 1
-          fi
-          response=$(curl -fsSL -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${GH_TOKEN}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${REPO}/branches/${TARGET}" || true)
-          if [ -z "${response}" ]; then
-            echo "::error::Unable to retrieve branch metadata for '${TARGET}'."
-            exit 1
-          fi
-          protected=$(echo "${response}" | jq -r '.protected // false')
-          if [ "${protected}" != "true" ]; then
-            echo "::error::Releases must originate from a protected branch. Target '${TARGET}' is not protected."
-            exit 1
-          fi
-          echo "Target branch '${TARGET}' is protected."
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const target = context.payload.release?.target_commitish;
+            if (!target) {
+              core.setFailed('Release target branch is not specified.');
+              return;
+            }
+            const { owner, repo } = context.repo;
+            try {
+              const branch = await github.rest.repos.getBranch({ owner, repo, branch: target });
+              if (!branch.data.protected) {
+                core.setFailed(`Releases must originate from a protected branch. Target '${target}' is not protected.`);
+                return;
+              }
+              core.info(`Target branch '${target}' is protected.`);
+            } catch (error) {
+              core.setFailed(`Unable to retrieve branch metadata for '${target}': ${error.message}`);
+            }
 
   build-and-sign:
     needs: enforce-policy
