--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
       actions: write
+      id-token: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v5
@@ -102,6 +103,10 @@ jobs:
               validator.validate_str(path.read_text(encoding='utf-8'))
           print('CycloneDX validation succeeded for all artifacts.')
           PY
+
+      - name: Check dependency licenses
+        run: |
+          python scripts/check_sbom_licenses.py sbom/cyclonedx-sbom.json
 
       - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
