feat(scripts): replace shell wrappers with python cli

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,15 @@ repos:
     hooks:
       - id: black
         language_version: python3
+  - repo: https://github.com/mvdan/sh
+    rev: v3.7.0
+    hooks:
+      - id: shfmt
+        args: ["-w"]
+  - repo: https://github.com/koalaman/shellcheck
+    rev: v0.10.0
+    hooks:
+      - id: shellcheck
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
