--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dev = [
     "ruff>=0.14.0",
     "mypy>=1.8.0",
     "pytest>=8.4.2",
+    "pytest-benchmark>=4.0.0",
     "pytest-cov>=6.0.0",
     "pytest-asyncio>=0.25.2",
     "pytest-html>=4.1.1",
