--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ mypy==1.18.2
 
 # Testing stack
 pytest==8.4.2
+pytest-benchmark==4.0.0
 pytest-cov==6.0.0
 pytest-asyncio==0.25.2
 hypothesis==6.140.3
