--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     arm: cross-architecture and portability checks for indicators
     heavy_math: compute-intensive suites that gate pull requests
+    flaky: quarantined scenarios executed in dedicated CI jobs with reruns
 filterwarnings =
     ignore::UserWarning
