--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -179,12 +179,14 @@ jobs:
       - name: Run quarantined flaky tests
         run: |
           set -o pipefail
+          set +e
           .venv/bin/python -m pytest tests/ -m flaky \
             --reruns=2 --reruns-delay=2 \
             --junitxml=reports/flaky-tests.xml \
             --html=reports/flaky-tests-report.html --self-contained-html \
             --flaky-report=reports/flaky-tests.json
           status=$?
+          set -e
           if [ "$status" -eq 5 ]; then
             echo "No tests collected for 'flaky' marker; treating as success."
             exit 0
