--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,12 +33,49 @@ jobs:
           mkdir -p reports
       - name: Run unit and integration tests with coverage
         run: |
-          .venv/bin/python -m pytest tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
+          .venv/bin/python -m pytest \
+            -m "not flaky" \
+            tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
             --cov=core --cov=backtest --cov=execution \
+            --cov-branch \
             --cov-report=xml --cov-report=term-missing --cov-report=html:coverage_html \
             --cov-fail-under=90 \
             --junitxml=reports/unit-integration-tests.xml \
-            --html=reports/unit-integration-report.html --self-contained-html
+            --html=reports/unit-integration-report.html --self-contained-html \
+            --flaky-report=reports/flaky-tests-skipped.json
+      - name: Publish coverage summary
+        run: |
+          .venv/bin/python - <<'PY'
+          import os
+          import pathlib
+          import xml.etree.ElementTree as ET
+
+          report_path = pathlib.Path("coverage.xml")
+          if not report_path.exists():
+              raise SystemExit("coverage.xml not found; coverage step may have failed")
+
+          root = ET.parse(report_path).getroot()
+          line_rate = float(root.get("line-rate", 0.0)) * 100
+          branch_rate = float(root.get("branch-rate", 0.0)) * 100
+
+          summary_lines = [
+              "### Coverage summary\n",
+              "",
+              "| Metric | Percentage |",
+              "| --- | --- |",
+              f"| Line coverage | {line_rate:.2f}% |",
+              f"| Branch coverage | {branch_rate:.2f}% |",
+              "",
+          ]
+
+          step_summary = os.environ.get("GITHUB_STEP_SUMMARY")
+          if step_summary:
+              with open(step_summary, "a", encoding="utf-8") as handle:
+                  handle.write("\n".join(summary_lines))
+
+          if branch_rate < 90.0:
+              raise SystemExit(f"Branch coverage {branch_rate:.2f}% is below the required 90% threshold")
+          PY
       - name: Run property-based tests with statistics
         run: |
           .venv/bin/python -m pytest tests/property/ --hypothesis-show-statistics \
@@ -59,6 +96,12 @@ jobs:
           path: |
             reports/unit-integration-report.html
             reports/property-tests-report.html
+          if-no-files-found: error
+      - name: Upload flaky manifest
+        uses: actions/upload-artifact@v4
+        with:
+          name: flaky-tests-skipped-${{ matrix.python-version }}
+          path: reports/flaky-tests-skipped.json
           if-no-files-found: error
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
@@ -150,4 +193,54 @@ jobs:
           path: |
             reports/mutmut
             mutants
+          if-no-files-found: warn
+
+  flaky-tests:
+    name: Quarantined flaky tests
+    runs-on: ubuntu-latest
+    needs: tests
+    if: always()
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v3
+      - name: Create virtual environment
+        run: uv venv
+      - name: Install dependencies
+        run: |
+          uv pip install -r requirements.lock
+          uv pip install -r requirements-dev.lock
+      - name: Prepare test report directories
+        run: |
+          mkdir -p reports
+      - name: Run quarantined flaky tests
+        run: |
+          set -o pipefail
+          set +e
+          .venv/bin/python -m pytest tests/ -m flaky \
+            --reruns=2 --reruns-delay=2 \
+            --junitxml=reports/flaky-tests.xml \
+            --html=reports/flaky-tests-report.html --self-contained-html \
+            --flaky-report=reports/flaky-tests.json
+          status=$?
+          set -e
+          if [ "$status" -eq 5 ]; then
+            echo "No tests collected for 'flaky' marker; treating as success."
+            exit 0
+          fi
+          exit "$status"
+      - name: Upload flaky test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flaky-tests-artifacts
+          path: |
+            reports/flaky-tests.xml
+            reports/flaky-tests-report.html
+            reports/flaky-tests.json
           if-no-files-found: warn
