Add nightly heavy-math regression suites

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,5 +9,6 @@ markers =
     arm: cross-architecture and portability checks for indicators
     heavy_math: compute-intensive suites that gate pull requests
     flaky: quarantined scenarios executed in dedicated CI jobs with reruns
+    nightly: full-fidelity regression suites executed in nightly pipelines
 filterwarnings =
     ignore::UserWarning
