--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -15,6 +15,8 @@ jobs:
     name: Update release draft
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
       - name: Update draft release notes
         uses: ./.github/actions/release-drafter-retry
         with:
