--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
 
     steps:
       - name: Check out repository
@@ -31,8 +31,7 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: "cp${{ replace(matrix.python-version, '.', '') }}-*"
-          CIBW_SKIP: "pp*"
+          CIBW_BUILD: "cp311-* cp312-* cp313-*"
           CIBW_ARCHS_MACOS: "universal2"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_MUSLLINUX_X86_64_IMAGE: "musllinux_1_2"
