--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,7 +22,13 @@ jobs:
           pip install pytest pytest-cov
       - name: Run tests with coverage
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest \
+            -m "not flaky" \
+            tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
+            tests/contracts/ tests/data/ tests/security/ \
+            --cov=core --cov=backtest --cov=execution \
+            --cov-branch \
+            --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
