--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,8 +30,8 @@ jobs:
         run: uv venv
       - name: Install dependencies
         run: |
-          uv pip install -r requirements.lock
-          uv pip install -r requirements-dev.lock
+          uv pip install -r requirements.txt
+          uv pip install -r requirements-dev.txt
       - name: Prepare test report directories
         run: |
           mkdir -p reports
@@ -205,8 +205,8 @@ jobs:
         run: uv venv
       - name: Install dependencies
         run: |
-          uv pip install -r requirements.lock
-          uv pip install -r requirements-dev.lock
+          uv pip install -r requirements.txt
+          uv pip install -r requirements-dev.txt
       - name: Run pytest in parallel with profiling
         run: |
           .venv/bin/python -m pytest tests/ -n auto --durations=20 --profile
@@ -273,8 +273,8 @@ jobs:
         run: uv venv
       - name: Install dependencies
         run: |
-          uv pip install -r requirements.lock
-          uv pip install -r requirements-dev.lock
+          uv pip install -r requirements.txt
+          uv pip install -r requirements-dev.txt
       - name: Prepare test report directories
         run: |
           mkdir -p reports
