--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,12 +22,13 @@ jobs:
           pip install pytest pytest-cov
       - name: Run tests with coverage
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=./ --cov-branch --cov-report=xml --cov-fail-under=90
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }} # Додайте цей секрет у налаштуваннях репозиторію
+          fail_ci_if_error: true
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
