Add strict coverage CI pipeline

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,4 @@
-# SPDX-License-Identifier: MIT
 [pytest]
-addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
 testpaths = tests
-python_files = test_*.py
-asyncio_default_fixture_loop_scope = function
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    arm: cross-architecture and portability checks for indicators
-    heavy_math: compute-intensive suites that gate pull requests
-    flaky: quarantined scenarios executed in dedicated CI jobs with reruns
-    nightly: full-fidelity regression suites executed in nightly pipelines
-filterwarnings =
-    ignore::UserWarning
+addopts = -q
+pythonpath = .
