--- a/.coveragerc
+++ b/.coveragerc
@@ -1,59 +1,13 @@
 [run]
-source =
-    core
-    backtest
-    execution
+branch = True
+source = src
 omit =
-    **/__init__.py
-    analytics/**
-    markets/**
-    nfpro/**
-    tests/**
-    apps/**
-    interfaces/**
-    libs/**
-    backtest/**
-    execution/**
-    core/accelerators/**
-    core/agent/**
-    core/altdata/**
-    core/config/**
-    core/events/**
-    core/indicators/**
-    core/messaging/**
-    core/metrics/**
-    core/neuro/**
-    core/reporting/**
-    core/strategies/**
-    core/utils/**
-    core/phase/**
-    core/data/adapters/**
+    tests/*
+    */__init__.py
 
 [report]
+skip_empty = True
 show_missing = True
-precision = 2
-omit =
-    **/__init__.py
-    analytics/**
-    markets/**
-    nfpro/**
-    tests/**
-    apps/**
-    interfaces/**
-    libs/**
-    backtest/**
-    execution/**
-    core/accelerators/**
-    core/agent/**
-    core/altdata/**
-    core/config/**
-    core/events/**
-    core/indicators/**
-    core/messaging/**
-    core/metrics/**
-    core/neuro/**
-    core/reporting/**
-    core/strategies/**
-    core/utils/**
-    core/phase/**
-    core/data/adapters/**
+exclude_lines =
+    pragma: no cover
+    if __name__ == .__main__.
