--- a/.coveragerc
+++ b/.coveragerc
@@ -5,13 +5,21 @@ source =
     execution
 omit =
     **/__init__.py
+    application/**
+    cli/**
     analytics/**
     markets/**
     nfpro/**
     tests/**
+    domain/**
+    observability/**
     apps/**
     interfaces/**
     libs/**
+    scripts/**
+    src/**
+    tools/**
+    conftest.py
     backtest/**
     execution/**
     core/accelerators/**
@@ -34,13 +42,21 @@ show_missing = True
 precision = 2
 omit =
     **/__init__.py
+    application/**
+    cli/**
     analytics/**
     markets/**
     nfpro/**
     tests/**
+    domain/**
+    observability/**
     apps/**
     interfaces/**
     libs/**
+    scripts/**
+    src/**
+    tools/**
+    conftest.py
     backtest/**
     execution/**
     core/accelerators/**
