--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "tenacity>=9.1.2",
     "aiolimiter>=1.2.1",
     "fastapi>=0.119.0,<1.0.0",
+    "PyJWT[crypto]>=2.9.0",
     "uvicorn>=0.37.0",
     "jinja2>=3.1.6",
     "setuptools>=80.9.0",
