--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ prometheus-client>=0.23.1
 opentelemetry-api>=1.37.0
 opentelemetry-sdk>=1.37.0
 opentelemetry-exporter-otlp>=1.37.0
+redis>=5.0.1
 httpx>=0.28.1
 websockets>=15.0.1
 ccxt>=4.5.10
