--- a/conf/experiment/prod.yaml
+++ b/conf/experiment/prod.yaml
@@ -1,5 +1,9 @@
 name: prod
-db_uri: "postgresql://prod:${PROD_DB_PASSWORD:-secure}@host/prod"
+db_uri: "postgresql://prod:${PROD_DB_PASSWORD:-secure}@host/prod?sslmode=verify-full"
+db_tls:
+  ca_file: ${PROD_DB_CA_FILE:-/etc/tradepulse/db/root-ca.pem}
+  cert_file: ${PROD_DB_CERT_FILE:-/etc/tradepulse/db/client.crt}
+  key_file: ${PROD_DB_KEY_FILE:-/etc/tradepulse/db/client.key}
 debug: false
 log_level: WARNING
 random_seed: 7
