--- a/conf/experiment/stage.yaml
+++ b/conf/experiment/stage.yaml
@@ -1,5 +1,9 @@
 name: stage
-db_uri: "postgresql://stage:${STAGE_DB_PASSWORD:-secure}@host/stage"
+db_uri: "postgresql://stage:${STAGE_DB_PASSWORD:-secure}@host/stage?sslmode=verify-full"
+db_tls:
+  ca_file: ${STAGE_DB_CA_FILE:-/etc/tradepulse/db/root-ca.pem}
+  cert_file: ${STAGE_DB_CERT_FILE:-/etc/tradepulse/db/client.crt}
+  key_file: ${STAGE_DB_KEY_FILE:-/etc/tradepulse/db/client.key}
 debug: false
 log_level: INFO
 random_seed: 2024
